fix log colors, add game covers

--- a/style.scss
+++ b/style.scss
@@ -245,6 +245,10 @@ h3 { font-size: 125%; }
 	}
 }
 
+.boxart {
+	vertical-align: -4px;
+}
+
 /** Black theme **/
 /*
 body {
